# op-worker

./: .clang-format-include  .gitignore  .gitmodules  .project  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  FUTURE.md  FindFUSE.cmake  Makefile  PRIVACY_POLICY.html  README-DEVELOPER.md  README.md  ReleaseNotes.md  annotations.config  appmock_client.py  big.REMOVED.git-id  branchConfig.yaml  ct.py  ct_onenv.py  ct_run.py  dockers.config  env.json  erl_compile.sh  example_app_description.erl  final_tasks.sh  gen_config  gen_dev  gen_dev.args  gen_dev.erl  gen_dev_args.json  gen_test  gen_test.args  generate_test_doc.sh  gui-config.sh  gui-image.conf  inject-gui.sh  inject_gui.sh  luma.sh  (+13 more)
c_src/oneproxy/: .clang-format  CMakeLists.txt  FindBotan.cmake  FindGlobus.cmake  build_oneproxy.sh
clproto/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  Makefile  README.md  ReleaseNotes.md  rebar.config
clproto/proto/: client_messages.proto  common_messages.proto  dbsync_messages.proto  diagnostic_messages.proto  event_messages.proto  fuse_messages.proto  handshake_messages.proto  messages.proto  oneproxy_messages.proto  proxyio_messages.proto  remote_driver_messages.proto  remote_file_management.proto  server_messages.proto  stream_messages.proto
helpers/: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  ct_run.py
helpers/appmock/: CHANGELOG.md  Makefile  README.md  make.py  rebar.config  rebar3
helpers/bamboos/: .gitignore  README.md  sample_configuration.cfg
helpers/clproto/: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  rebar.config
helpers/cmake/: FindFolly.cmake  FindLibraryUtils.cmake  FindTBB.cmake
helpers/src/: CMakeLists.txt  IStorageHelper.cc  asioExecutor.h  cephHelper.cc  cephHelper.h  directIOHelper.cc  directIOHelper.h  fuseOperations.cc  fuseOperations.h  glusterfsHelper.cc  glusterfsHelper.h  init.cc  keyValueAdapter.cc  keyValueAdapter.h  keyValueHelper.h  logging.h  nullDeviceHelper.cc  nullDeviceHelper.h  posixHelper.cc  posixHelper.h  proxyHelper.cc  proxyIOHelper.cc  proxyIOHelper.h  s3Helper.cc  s3Helper.h  scheduler.cc  scheduler.h  storageHelper.cc  storageHelperCreator.cc  storageHelperFactory.cc  swiftHelper.cc  swiftHelper.h
helpers/test/: CMakeLists.txt
object/: CMakeLists.txt
src/: CMakeLists.txt  appmock.app.src  appmock_app.erl  appmock_logic.erl  appmock_sup.erl  bufferAgent.cc  bufferAgent.h  cephHelper.cc  cephHelper.h  clproto.app.src  clusterProxyHelper.cc  clusterProxyHelper.h  communicationHandler.cc  directIOHelper.cc  directIOHelper.h  fileCache.cc  fuseOperations.h  glusterfsHelper.cc  glusterfsHelper.h  init.cc  ioServiceExecutor.cc  ioServiceExecutor.h  keyValueAdapter.cc  keyValueAdapter.h  linuxAFIOService.cc  linuxAFIOService.h  logging.cc  logging.h  mock_app_behaviour.erl  mock_app_description.erl  nullDeviceHelper.cc  oneErrors.cc  oneErrors.h  oneprovider_node.app.src  oneprovider_node_app.erl  oneprovider_node_sup.erl  op_ccm.erl  op_ccm_sup.erl  op_worker.app.src  op_worker.erl  (+31 more)
src/buffering/: bufferAgent.h  readCache.h  writeBuffer.h
src/client/: appmock_client.erl  mock_app_description.erl  mock_app_description_behaviour.erl
src/cluster_elements/: node_manager_plugin.erl
src/cluster_manager/: cluster_manager.erl
src/common/: appmock_utils.erl
src/communication/: certificateData.cc  communicationHandler.cc  communicationHandler.h  communicator.cc  connection.cc  connection.h  connectionPool.cc  connectionPool.h  declarations.h  exception.h  future.cc  future.h  mailbox.cc  messageCreator.cc  messages.cc  persistentConnection.cc  persistentConnection.h  retrier.h  sslConnection.cc  sslConnectionPool.cc  subscriptionData.h  translator.h  websocketConnection.cc  websocketConnectionPool.cc
src/config/: node_manager_plugin.erl
src/errors/: handshakeErrors.cc  handshakeErrors.h
src/graph_sync/: file_rpc.erl  gs_client_translator.erl  gs_client_worker.erl  gs_logic_plugin.erl  gs_protocol_plugin.erl  gs_worker.erl  gui_gs_translator.erl
src/gui/: gui_route_plugin.erl  gui_routes.erl  gui_session_plugin.erl
src/gui_helpers/: ember_ws_handler.erl  g_ctx.erl  g_session.erl  g_str.erl  gui_route_plugin_behaviour.erl  gui_session_plugin_behaviour.erl  opn_html_handler.erl  opn_page_handler.erl  opn_static_handler.erl  page_backend_behaviour.erl  sync.erl
src/helpers/: IStorageHelper.cc  IStorageHelper.h  storageHelperFactory.h
src/listeners/: gui_listener.erl  protocol_listener.erl  provider_listener.erl  redirector_listener.erl  rest_listener.erl  start_dns_listener.erl  start_gui_listener.erl  start_protocol_listener.erl  start_redirector_listener.erl  start_rest_listener.erl
src/logic/: atm_inventory_logic.erl  atm_lambda_logic.erl  atm_workflow_schema_logic.erl  cluster_logic.erl  group_logic.erl  handle_logic.erl  handle_service_logic.erl  harvester_logic.erl  provider_logic.erl  share_logic.erl  space_logic.erl  storage_logic.erl  token_logic.erl  user_logic.erl
src/messages/: clientHandshakeRequest.cc  clientHandshakeRequest.h  clientMessage.h  endOfStream.cc  endOfStream.h  getProtocolVersion.cc  getProtocolVersion.h  handshakeRequest.cc  handshakeRequest.h  handshakeResponse.cc  handshakeResponse.h  messageAcknowledgement.cc  messageAcknowledgement.h  messageRequest.cc  messageRequest.h  messageStreamReset.cc  messageStreamReset.h  ping.cc  ping.h  pong.cc  pong.h  processingStatus.h  protocolVersion.cc  protocolVersion.h  serverMessage.h  status.cc  status.h
src/middleware/: mi_interprovider_communicator.erl  middleware.erl  middleware_plugin.erl  middleware_sanitizer.erl  middleware_utils.erl
src/modules/: auth_manager.erl
src/monitoring/: graphiteMetricsCollector.cc  graphiteMetricsCollector.h  metricsCollector.h  monitoring.h  monitoringConfiguration.cc  monitoringConfiguration.h
src/oneprovider_modules/: worker_plugin_behaviour.erl
src/op_logic/: op_file.erl  op_logic.erl  op_logic_behaviour.erl  op_logic_utils.erl  op_metrics.erl  op_provider.erl  (+6 more)
veilclient/: .gitmodules  CMakeLists.txt  Doxyfile  README.md  ReleaseNotes.md
(+5767 files in other folders)
